# goatFOAM

./: Cargo.toml  README.md
src/: fvc.rs  geometry.rs  main.rs
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
